# topcv-crawler

./: .gitignore  README.md  pyproject.toml  requirements.txt  scrape_topcv_company.py
.github/workflows/: crawl.yml
data/: no_data_2025-11-27.txt
src/: __init__.py  gdrive_uploader.py  main.py  scrape_topcv.py  test_crawl.py  upload_gdrive.py
